vqgan for kinetics

--- a/configs/video_vqgan.yaml
+++ b/configs/video_vqgan.yaml
@@ -11,7 +11,7 @@ model:
       in_channels: 3
       out_ch: 3
       ch: 128
-      ch_mult: [1,1,2,2]  # num_down = len(ch_mult)-1
+      ch_mult: [1,2,2,2]  # num_down = len(ch_mult)-1
       num_res_blocks: 2
       attn_resolutions: [16]
       dropout: 0.0
@@ -21,7 +21,7 @@ model:
       params:
         disc_conditional: False
         disc_in_channels: 3
-        disc_start: 40001
+        disc_start: 100001
         disc_weight: 0.8
         codebook_weight: 1.0
 
@@ -35,10 +35,10 @@ data:
       params:
         config:
           size: 128
-          data_path: /home/group/minerl_fwd0.9
+          data_path: /home/wilson/data/kinetics600
     validation:
       target: taming.data.video.VideoDatasetTest
       params:
         config:
           size: 128
-          data_path: /home/group/minerl_fwd0.9
+          data_path: /home/wilson/data/kinetics600
