--- a/environment.yaml
+++ b/environment.yaml
@@ -3,7 +3,7 @@ channels:
   - pytorch
   - defaults
 dependencies:
-  - python=3.8.5
+  - phon=3.8.5
   - pip=20.3
   - cudatoolkit=10.2
   - pytorch=1.7.0
