--- a/configs/robonet_vqgan.yaml
+++ b/configs/robonet_vqgan.yaml
@@ -7,11 +7,11 @@ model:
     ddconfig:
       double_z: False
       z_channels: 256
-      resolution: 64
+      resolution: 128
       in_channels: 3
       out_ch: 3
       ch: 128
-      ch_mult: [1,2,4]  # num_down = len(ch_mult)-1
+      ch_mult: [1,2,2,2]  # num_down = len(ch_mult)-1
       num_res_blocks: 2
       attn_resolutions: [16]
       dropout: 0.0
@@ -28,17 +28,15 @@ model:
 data:
   target: main.DataModuleFromConfig
   params:
-    batch_size: 2
+    batch_size: 4
     num_workers: 8
     train:
-      target: taming.data.video.VideoDatasetTrain
+      target: taming.data.robonet.RobonetDatasetTrain
       params:
         config:
-          size: 64
-          data_path: /home/wilson/data/something-something
+          size: 128
     validation:
-      target: taming.data.video.VideoDatasetTest
+      target: taming.data.robonet.RobonetDatasetTest
       params:
         config:
-          size: 64
-          data_path: /home/wilson/data/something-something
+          size: 128
