--- a/configs/video_vqgan.yaml
+++ b/configs/video_vqgan.yaml
@@ -11,7 +11,7 @@ model:
       in_channels: 3
       out_ch: 3
       ch: 128
-      ch_mult: [1,2,2,2]  # num_down = len(ch_mult)-1
+      ch_mult: [1, 2, 3, 4]  # num_down = len(ch_mult)-1
       num_res_blocks: 2
       attn_resolutions: [16]
       dropout: 0.0
@@ -35,10 +35,10 @@ data:
       params:
         config:
           size: 128
-          data_path: /home/wilson/data/bdd100k_r128
+          data_path: /home/wilson/data/kinetics600
     validation:
       target: taming.data.video.VideoDatasetTest
       params:
         config:
           size: 128
-          data_path: /home/wilson/data/bdd100k_r128
+          data_path: /home/wilson/data/kinetics600
